<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>br.gov</groupId>
    <artifactId>gsan-persistence</artifactId>
    <version>0.1</version>
    <packaging>jar</packaging>

    <name>gsan-persistence</name>

    <properties>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.wildfly>8.0.0.Final</version.wildfly>
        <version.arquillian>1.1.4.Final</version.arquillian>
    </properties>
    
    <dependencyManagement>
	    <dependencies>
	        <dependency>
	            <groupId>org.jboss.arquillian</groupId>
	            <artifactId>arquillian-bom</artifactId>
	            <version>1.1.3.Final</version>
	            <scope>import</scope>
	            <type>pom</type>
	        </dependency>
	    </dependencies>
	</dependencyManagement>

    <dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.1</version>
		</dependency>
		
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>1.2</version>
			<scope>compile</scope>
		</dependency>    
    
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
            <version>7.0</version>
        </dependency>
        
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>4.3.5.Final</version>
		</dependency>    
		
		<dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>    

        <dependency>
		    <groupId>org.jboss.arquillian.junit</groupId>
		    <artifactId>arquillian-junit-container</artifactId>
		    <scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.wildfly</groupId>
			<artifactId>wildfly-arquillian-container-managed</artifactId>
			<version>${version.wildfly}</version>
		</dependency>

		<dependency>
		    <groupId>org.jboss.arquillian.extension</groupId>
		    <artifactId>arquillian-persistence-dbunit</artifactId>
		    <version>1.0.0.Alpha7</version>
		    <scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.jboss.arquillian.extension</groupId>
			<artifactId>arquillian-persistence-core</artifactId>
			<version>1.0.0.Alpha7</version>
		    <scope>test</scope>
		</dependency>				
    </dependencies>

    <build>
    	<pluginManagement>
	        <plugins>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-compiler-plugin</artifactId>
	                <version>3.0</version>
	                <configuration>
	                    <source>1.8</source>
	                    <target>1.8</target>
	                    <debug>true</debug>
	                </configuration>
	            </plugin>
	            <plugin>
				    <artifactId>maven-surefire-plugin</artifactId>
				    <version>2.17</version>
				    <configuration>
			        	<skipTests>false</skipTests>
			        </configuration>
				</plugin>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-ejb-plugin</artifactId>
	                <version>2.3</version>
	                <configuration>
	                    <ejbVersion>3.1</ejbVersion>
	                </configuration>
	            </plugin>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-dependency-plugin</artifactId>
	                <version>2.1</version>
	                <executions>
	                    <execution>
	                        <phase>validate</phase>
	                        <goals>
	                            <goal>copy</goal>
	                        </goals>
	                        <configuration>
	                            <outputDirectory>${endorsed.dir}</outputDirectory>
	                            <silent>true</silent>
	                            <artifactItems>
	                                <artifactItem>
	                                    <groupId>javax</groupId>
	                                    <artifactId>javaee-endorsed-api</artifactId>
	                                    <version>6.0</version>
	                                    <type>jar</type>
	                                </artifactItem>
	                            </artifactItems>
	                        </configuration>
	                    </execution>
	                </executions>
	            </plugin>
	        </plugins>
        </pluginManagement>
    </build>

</project>
